--- a/textured-box.html
+++ b/textured-box.html
@@ -3,11 +3,15 @@
 
 <head>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
 </head>
 
 <body>
     <a-scene>
-        <a-box position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+        <a-assets>
+            <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg" />
+        </a-assets>
+        <a-box srrc="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
     </a-scene>
 </body>
 
