--- a/textured-box.html
+++ b/textured-box.html
@@ -11,7 +11,9 @@
         <a-assets>
             <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg" />
         </a-assets>
-        <a-box srrc="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+        <a-box src="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+
+        <a-sky></a-sky>
     </a-scene>
 </body>
 
