--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
   <a-scene>
     <a-assets>
-      <img id="boxTexture" src="https://i.imgur.com/mYmmbrp.jpg" />
+      <img id="boxTexture"
+        src="https://lh3.googleusercontent.com/proxy/tGSHGeHzEUxb_-kOE6JHobfs0S2PdIdnVDlZtu3sks3__rHkcVC_W2Lo5gGWAuRKjYoFJoDeghn8qQjko2X4sLaDJkxEaZEnHGPs9tz9r8PbC3XrfQqjtSACaVoI" />
       <img id="skyTexture" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg" />
     </a-assets>
 
-    <a-box src="#boxTexture" position="0 2 -5" rotation="0 45 45" scale="2 2 2"></a-box>
+    <a-box src="#boxTexture" position="-4 1.25 -8" rotation="0 45 45" scale="2 2 2"></a-box>
+    <a-sphere position="0 2.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
 
     <a-sky src="#skyTexture"></a-sky>
   </a-scene>
