--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Hello, World! - A-Frame">
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+  <script src="https://unpkg.com/aframe-extras.ocean@%5E3.5.x/dist/aframe-extras.ocean.min.js"></script>
 </head>
 
 <body>
@@ -21,6 +22,8 @@
     <a-sphere position="0 2.25 -5" radius="1.0" color="#FFFFF"></a-sphere>
 
     <a-sky src="#skyTexture"></a-sky>
+    <a-entity id="ocean" ocean="density: 20; width: 50; depth: 30; speed: 4"
+      material="color: #9CE3F9; opacity: 0.55; metalness: 0; roughness: 1.2" rotation="-90 0 0"></a-entity>
 
   </a-scene>
 </body>
