--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
     <a-entity id="ocean" ocean="density: 20; width: 50; depth: 60; speed: 4"
       material="color: #9CE3F9; opacity: 0.55; metalness: 0; roughness: 1.2" rotation="-90 0 0"></a-entity>
+
+    <a-camera>
+      <a-cursor></a-cursor>
+    </a-camera>
   </a-scene>
 </body>
 
