--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
   <script src="https://unpkg.com/aframe-extras.ocean@%5E3.5.x/dist/aframe-extras.ocean.min.js"></script>
+  <script type="text/javascript" src="custom.js"></script>
 </head>
 
 <body>
@@ -22,15 +23,26 @@
     <a-light type="ambient" color="#445451"></a-light>
 
     <a-box src="#boxTexture" position="-4 1.25 -8" rotation="0 45 0" scale="2 2 2"
-      animation="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"></a-box>
+      animation__position="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"
+      animation__mouseenter="property: scale; to: 2.7 2.7 2.7; dur: 300; startEvents: mouseenter"
+      animation__mouseleave="property: scale; to: 2 2 2; dur: 300; startEvents: mouseleave">
+    </a-box>
 
-    <a-sphere position="0 2.25 -5" radius="1.0" color="#FFFFF"></a-sphere>
+    <a-sphere position="0 3.25 -5" radius="1.0" color="#FFFFF" scale-on-mouseenter></a-sphere>
 
     <a-box src="#boxTexture" position="4 1.25 -8" rotation="0 45 0" scale="2 2 2"
-      animation="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"></a-box>
+      animation__position="property: object3D.position.y; to: 2.2; dir: alternate; dur: 2000; loop: true"
+      animation__mouseenter="property: scale; to: 2.7 2.7 2.7; dur: 300; startEvents: mouseenter"
+      animation__mouseleave="property: scale; to: 2 2 2; dur: 300; startEvents: mouseleave"></a-box>
+
+    <a-sound src="https://cdn.aframe.io/basic-guide/audio/backgroundnoise.wav" autoplay="true" position="4 1.25 -8">
+    </a-sound>
 
     <a-entity id="ocean" ocean="density: 20; width: 50; depth: 60; speed: 4"
-      material="color: #9CE3F9; opacity: 0.55; metalness: 0; roughness: 1.2" rotation="-90 0 0"></a-entity>
+      material="color: #9CE3F9; opacity: 0.55; metalness: 0; roughness: 1.2" rotation="-90 0 0">
+    </a-entity>
+
+    <a-entity text="value: WELCOME TO MY SCENE!; color: #FFFFF" position="-0.9 0.2 -3" scale="4.5 4.5 4.5"></a-entity>
 
     <a-camera>
       <a-cursor></a-cursor>
