experimenting with different fonts

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       material="color: #9CE3F9; opacity: 0.55; metalness: 0; roughness: 1.2" rotation="-90 0 0">
     </a-entity>
 
-    <a-entity text="value: WELCOME TO MY SCENE!; color: #FFFFF" position="-0.9 0.2 -3" scale="4.5 4.5 4.5"></a-entity>
+    <a-entity text="font: https://cdn.aframe.io/fonts/Roboto-msdf.json; value: WELCOME TO MY SCENE!; color: #FFFFF"
+      position="-0.9 0.2 -3" scale="4.5 4.5 4.5"></a-entity>
 
     <a-camera>
       <a-cursor></a-cursor>
